tests/files/parser_tests/should_fail/080.cmdr
//Should not parse due to incorrect string concatenation
x = "hi" "there";